# rails-cookies-monster

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  HOWTO.md  LICENSE  README.md  VERSIONS.md  build.rs  make-tars.sh  rustfmt.toml
cookies/: v8.0.1
docker/base/: Dockerfile
docker/rails/: Dockerfile  rails-7.0.x.patch
docker/rails/rails_patch/: rails_controller.rb  rails_routes.rb
src/: lib.rs  main.rs
src/docker/: build.rs  client.rs  mod.rs
src/rails/: mod.rs  versions.rs
