[package]
name = "rails-cookies-monster"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "*"

base64 = "0.22.1"
urlencoding = "2.1.3"
rails-cookie-parser = "0.1.0"
rayon = "1.10"

# hyper = "1.5.2"
# hyper-util = "0.1.10"
# hyperlocal = "0.9.1"
# http-body-util = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
log = "0.4.25"
env_logger = "0.11.6"
