[package]
name = "rails-cookies-monster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rcm"
path = "src/main.rs"
doc = false
doctest = false
test = false

[lib]
name = "rails_cookies_monster"
path = "src/lib.rs"

[dependencies]
bollard = { version = "*", features = ["buildkit"] }

base64 = "0.22.1"
urlencoding = "2.1.3"
rails-cookie-parser = "0.1.0"
rayon = "1.10"


serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
log = "0.4.25"
env_logger = "0.11.6"
semver = "1.0.25"

# http-body-util = "0.1.2"
# futures-util = "0.3.31"
hyper = "1.5.2"
tokio-util = "0.7.13"
dockworker = "0.6.0"
