[package]
name = "rails-cookies-monster"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rails-cookies-monter"
path = "src/main.rs"
doc = false
doctest = false
test = false

[lib]
name = "rails_cookies_monster"
path = "src/lib.rs"

[dependencies]
dockworker = "0.6.0"

base64 = "0.22.1"
urlencoding = "2.1.3"
rails-cookie-parser = "0.1.0"
rayon = "1.10"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
log = "0.4.26"
env_logger = "0.11.6"
semver = "1.0.25"

tokio-util = "0.7.13"
itertools = "0.14.0"
reqwest = "0.12.12"

[build-dependencies]
tar = "0.4.44"
